adds workflow to repo 3

--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Import Secrets
-        uses: hashicorp/vault-action@v2.1.4.
+        uses: hashicorp/vault-action@v2.1.4
         with:
           url: http://192.168.1.19:8200
           tlsSkipVerify: true
