--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -18,6 +18,6 @@ jobs:
           namespace: Tech
           role: demo
           secrets: |
-            secret/data/ci app_secret
+            secret/data/ci app_secret | APP_SECRET
       - name: Build Docker Image
         run: docker build . --file Dockerfile --build-arg app_secret="${{ env.APP_SECRET }}" -t vault-action-exampleapp
